k3s-wordpress/portainer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: wordpress-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
      - name: portainer
        image: portainer/portainer-ce:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
