k3s-wordpress/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-app
  namespace: wordpress-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
      - name: wordpress-app
        image: wordpress:latest
        imagePullPolicy: "Always"
        ports:
          - containerPort: 80
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html  
      volumes:
      - name: wordpress-data
        hostPath:
          path: /home/sujan/k3s/k3s-wordpress/wordpress 
          type: DirectoryOrCreate
