k3s-wordpress/portainer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: wordpress-application
spec:
  type: ClusterIP
  selector:
    app: portainer
  ports:
    - port: 9000
      targetPort: 9000
