k3s-wordpress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-application
spec:
  type: ClusterIP  
  selector:
    app: wordpress-app
  ports:
    - port: 80
      targetPort: 80
